fix(page): service section mobile

--- a/src/components/ServicesCard/ServicesCard.module.scss
+++ b/src/components/ServicesCard/ServicesCard.module.scss
@@ -11,8 +11,8 @@
     align-items: center;
     background-color: $card-background-secondary;
     border-radius: 8px;
-    justify-content: space-between;
-    min-height: 400px;
+    min-height: 375px;
+    gap: 24px;
     padding: 24px;
     // box-shadow: 0 0 8px 12px rgba(151, 156, 158, 0.08);
 
